--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0"
+    "@faker-js/faker": "^7.6.0",
+    "prisma": "^4.11.0"
   }
 }
