--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.9.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "prisma": "^4.11.0"
   }
 }
