feat: return token when creates session

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://medmais:medmais@localhost:5432/"
+
+TOKEN_SECRET="d4cd0a07db1be42de41c4043928c7716"
