--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
-    "typescript": "5.0.2",
+    "typescript": "^4.9.5",
     "yup": "^1.0.2"
   },
   "devDependencies": {
