refact: adjust .env

--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://medmais:medmais@localhost:5432/"
+# DATABASE_URL="postgresql://augusto:AxRxxVlTmpjarC3BlheT0Q@medmais-9982.7tt.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full"
 
 TOKEN_SECRET="d4cd0a07db1be42de41c4043928c7716"
